--- a/src/components/ManageUsers/User.scss
+++ b/src/components/ManageUsers/User.scss
@@ -5,3 +5,26 @@
         }
     }
 }
+
+.manage-user-container {
+    i {
+        padding-right: 8px;
+    }
+    .actions {
+        .refresh {
+            margin-right: 10px;
+        }
+    }
+
+    .user-body {
+        .edit {
+            color: orange;
+            cursor: pointer;
+            padding-right: 10px;
+        }
+        .delete {
+            color: red;
+            cursor: pointer;
+        }
+    }
+}
