Done video 12.6: create, read role (useRef)

--- a/src/components/Role/Role.scss
+++ b/src/components/Role/Role.scss
@@ -12,4 +12,10 @@
             color: red;
         }
     }
+    .table-role {
+        .delete {
+            cursor: pointer;
+            color: red;
+        }
+    }
 }
