Done jwt course

--- a/src/components/Navigation/Nav.scss
+++ b/src/components/Navigation/Nav.scss
@@ -21,6 +21,10 @@
 }
 
 .nav-header {
+    padding-bottom: 0.5rem;
+    .navbar {
+        padding-bottom: 0 !important;
+    }
     .bg-header {
         background-color: #20232a;
     }
@@ -55,6 +59,7 @@
     .nav-link {
         &.active {
             color: #61dafb !important;
+            border-bottom: 2px solid;
         }
     }
 
