--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -16,6 +16,10 @@
             text-transform: uppercase;
             font-size: 30px;
             color: #1877f2;
+
+            a {
+                text-decoration: none;
+            }
         }
         .detail {
             font-size: 20px;
